# face-occlusion-estimation

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  baseline.yaml  convnext_tiny_gender_occ_sampler.yaml
configs/bg_invariance/: README.md  convnext_small_bg_invariance.yaml  dinov2_full_finetune_bg_invariance.yaml
configs/convnext_ablation/: 00_baseline.yaml  01_convnext_base.yaml  02_gender_balanced_loss.yaml  03_sigmoid.yaml  04_mlp_head.yaml  05_champion_ema.yaml  06_gender_balanced_ema.yaml  07_convnext_base_ema.yaml  08_ordinal_expectation_dldl.yaml  09_shadow_aux_head.yaml  10_gender_invariant.yaml  README.md
configs/dinov2_lora/: 01_vit_b_gender_balanced.yaml  01_vit_b_reg_lora_plain.yaml  02_vit_b_reg_lora_full.yaml  03_vit_b_reg_lora_full_fp16.yaml  04_vit_b_reg_lora_full_wsampler.yaml  05_vit_b_reg_lora_capacity.yaml  06_vit_b_reg_full_finetune.yaml  07_vit_b_reg_torchhub_plain.yaml  08_vit_b_reg_torchhub_capacity.yaml
configs/ensemble/: convnext_base.yaml  expectation_dldl.yaml  gender_balanced.yaml  sigmoid.yaml
configs/eval/: test_distribution.yaml
configs/experiments/: background_invariance.yaml  balanced_sampler.yaml  dinov2_lora.yaml  distribution_reweight.yaml  gender_invariant.yaml  ordinal_consistency.yaml  ordinal_head.yaml  shadow_head.yaml  synthetic_ranking.yaml
configs/imbalanced_regression/: 00_baseline.yaml  01_reweight_balanced.yaml  02_reweight_test_matched.yaml  03_sampler_balanced.yaml
configs/occlusion_aware_contrastive/: 00_baseline.yaml  01_ordinal_only.yaml  02_ordinal_consistency_symmetric.yaml  03_ordinal_consistency_ordinal_teacher.yaml  04_ordinal_consistency_symmetric_low_weight.yaml  README.md
configs/ordinal_warmup_ablation/: 00_baseline.yaml  01_ordinal_w005.yaml  02_ordinal_w010.yaml  03_ordinal_w005_warmup3.yaml  README.md  (+1 more)
docs/: PROJECT_GUIDE.md  balanced_batch_sampler.md  occlusion_aware_auxiliary_learning.md  occlusion_aware_contrastive_learning_approach.md  synthetic_occlusion_generation.md
jobs/: README.md  train.slurm  train_baseline.slurm
notebooks/: database3_identity_overlap.ipynb  validation_split_group_diagnostics.ipynb
scripts/: README.md  __init__.py  _bootstrap.py  analyze_val_predictions.py  check_setup.sh  make_split.py  predict_test.py  setup_cluster_env.sh  train.py  validate_data.py
tests/: __init__.py  test_background_augment.py  test_bg_consistency.py  test_bootstrap.py  test_calibration.py  test_callbacks.py  test_consistency.py  test_datamodule_merge.py  test_dataset.py  test_dfr.py  test_distribution_head.py  test_ema.py  test_ensemble.py  test_eval_lenses.py  test_face_mask_store.py  test_gender_adversary.py  test_gender_loss.py  test_high_occlusion_aggregate.py  test_loss_warmup.py  test_metadata.py  test_metric.py  test_mlp_head_and_optim.py  test_model_output.py  test_normalize.py  test_ordinal.py  test_ordinal_diagnostics.py  test_ordinal_training_step.py  test_prepare_hand_assets.py  test_ranking.py  test_realism_probe.py  test_realistic_mask_integration.py  test_samplers.py  test_shadow_head.py  test_splits.py  test_submission.py  test_synthetic_cache.py  test_synthetic_compositing.py  test_synthetic_hand_occluder.py  test_synthetic_mask_occluder.py  test_synthetic_occlusion.py  (+7 more)
(+104 files in other folders)
