[project]
name = "face-occlusion-estimation"
version = "0.1.0"
description = "Predict how much of a face is hidden from a single cropped image."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "pytorch-lightning>=2.2",
    "timm>=1.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]

[dependency-groups]
dev = [
    "pre-commit>=3.0",
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_occlusion"]

# -- Ruff ------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["face_occlusion"]
