[project]
name = "face-occlusion-estimation"
version = "0.1.0"
description = "Predict how much of a face is hidden from a single cropped image."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
dependencies = [
    # PyTorch stack pinned to CUDA 12.8 (cu128) wheels. cu128 ships kernels for
    # both Ada (sm_89, e.g. RTX 4090) and Blackwell (sm_120, e.g. RTX 5090), so a
    # single environment runs on both architectures. Pinning the explicit cu128
    # index also stops uv from resolving a newer CUDA 13 build that the host driver
    # may not support. Requires an NVIDIA driver new enough for CUDA 12.8 (>= ~525).
    "torch==2.7.1",
    "torchvision==0.22.1",

    "opencv-python-headless>=4.8",
    "numpy>=1.24,<3.0",
    "pytorch-lightning>=2.2",
    "timm>=1.0",
    "peft>=0.8.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
synthetic = ["mediapipe>=0.10.0"]
wandb = ["wandb>=0.16"]

[dependency-groups]
dev = [
    "pre-commit>=3.0",
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_occlusion"]

# -- uv / PyTorch CUDA wheels -----------------------------------------------

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

# -- Ruff ------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["face_occlusion"]

# -- Pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
